[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["kundziorro <mateusz.baranczyk@gmial.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pyotp = "^2.9.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.2.2"
flask = "^3.0.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"